--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
         	</div>
         	<div class="col-lg-3 d-flex mb-sm-4 ftco-animate">
         		<div class="staff">
-      				<div class="img mb-4" style="background-image: url(images/ryujin.jpg);"></div>
+      				<div class="img mb-4" style="background-image: url(images/ryujin.png);"></div>
       				<div class="info text-center">
       					<h3><a href="teacher-single.html">Shin Ryujin</a></h3>
       					<span class="position">Nail Specialist</span>
